[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "My macos system configuration"
authors = ["zyzkyrie <zyzkyrie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

bump_message = "bump: release version $current_version -> $new_version"
bump_pattern = "^(feat|fix|docs|style|refactor|perf|test)"
bump_map = { "feat" = "minor", "fix" = "patch", "docs" = "patch", "style" = "patch", "refactor" = "patch", "perf" = "patch", "test" = "patch"}

changelog_file = "CHANGELOG.md"
changelog_incremental = true
changelog_start_rev = "v0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
